# split-lift

./: .gitignore  LICENSE  README.md  pyproject.toml
cp_maps/: k10.json  k13.json  k15.json
docs/: fsll.md
examples/: README.md
splitlift/: cli.py  predict.py  verify.py
